@@ -1,8 +1,8 @@
 Package: tigerstats
 Type: Package
 Title: R for Elementary Statistics
-Version: 0.1.5-4
-Date: 2014-07-30
+Version: 0.1.6
+Date: 2014-07-31
 Author: Rebekah Robinson <rrobinson20@humana.com> and Homer
     White <hwhite0@georgetowncollege.edu>
 Maintainer: Homer White <hwhite0@georgetowncollege.edu>
