@@ -4,9 +4,10 @@
 #'   Wrapper function for \code{lm} in package \code{stats}.
 #' 
 #' @rdname lmGC
-#' @usage lmGC(form,data,graph=FALSE,diag=FALSE)
+#' @usage lmGC(form,data=parent.frame(),graph=FALSE,diag=FALSE)
 #' @param form formula of form y~x, both variables numeric
-#' @param data dataframe supplying y and x above
+#' @param data dataframe supplying y and x above.  If one or more of the variables is not in data, then
+#' they will be searched for in the parent environment.
 #' @param graph produce scatterplot with regression line
 #' @param diag produces diagnostic plots:  density plot of residuals, and residuals vs. fits
 #' @return A list of class "GClm".  Elements that may be queried include "slope", "intercept",
@@ -16,19 +17,19 @@
 #' @examples
 #' #To study the relationship between two numerical variables:
 #' lmGC(fastest~GPA,data=m111survey,graph=TRUE)
-lmGC <-function(form,data,graph=FALSE,diag=FALSE)  {
+lmGC <-function(form,data=parent.frame(),graph=FALSE,diag=FALSE)  {
   
   prsd <- ParseFormula(form)
   respname <- as.character(prsd$lhs)
   expname <- as.character(prsd$rhs)
   
-  if (length(expname)>1) stop("Onle one predictor variable permitted")
+  if (length(expname)>1) stop("Only one predictor variable permitted")
   
-  resp <- data[,respname]
-  exp <- data[,expname]
+  resp <- simpleFind(varName=respname,data=data)
+  exp <- simpleFind(varName=respname,data=data)
   
-  if (!is(resp,"numeric")) stop("Response variable must be quantitative")
-  if (!is(exp,"numeric")) stop("Predictor variable must be quantitative")
+  if (!is(resp,"numeric")) stop("Response variable must be numerical")
+  if (!is(exp,"numeric")) stop("Predictor variable must be numerical")
   
   #get the numbers from stats:lm
   results <- summary(lm(resp~exp))
